# jocker

./: .env  .envrc  .gitignore  Cargo.toml  LICENSE  README.md  release-plz.toml  rust-toolchain.toml  shell.nix
.github/workflows/: release-plz.yml  test.yml
.sqlx/: query-1162c4ac155e9fe78fd2e71172bb20ae1d0190ea55bd939df1b99f5cae127f7b.json  query-1750156d286a384b2b902212c046767417d337f982fb5129266ee04a33138a73.json  query-1cc038a8950fbaaca80b75c72053e92dfb413595d50bd3e99fc23d8ffaec7954.json  query-2939aaadd3cbfc970d880c6346713bd20bac219217001d8bb012e74e9ab5194b.json  query-34c0db052668e04c18bdca355ab5f9078dacca0924a9d0dfca32ee5a295708a0.json  query-4ecca5ad79c63b07abd5634166f16578f1c416f8777695bb8bf3f65762cbb57d.json  query-53903d940d278f810c351a9ab9a1c46c26504a9f7cddb9863111187b0b103df6.json  query-6016e74c71e427d370b3d30dcfce9e6f41c0366ff85c4c5d3dd74ec5034eebbd.json  query-6422bdd768a16ad98c6c1eb98c6657f877f4a2ec7005e50670815ff7959153f8.json  query-77381067fdb4ead2dc6787afc151ed752f858e9a861e995739f775e2767ad63b.json  query-7a2e681a136aee465bc230abab03ad4b9dd0e38964f3d803cd7afce6bf2392e5.json  query-85f849f3bf8bcadb15025a0f505e03f063efaf28dfcdc06c884e6ffa8a18c0ce.json  query-974f470fd811cd6f70fb192f980a7c7a6e4c057020f71232308ac6b77079ae4d.json  query-9bafb728c5a392b71b517687cbec3d6c931ca787b6c86f5f91dc5aa76c50d13c.json  query-a7667653fe7a393acad1ba220708a3dc2a5f91291b219ffba0beb9be916866d4.json  query-abcd857d03ed76626a0bbf6ac3da14b779203c75a31c7d619d871c3f24f882c6.json  query-b380dda2d830327b9157d85f2ed902b0a8b22869a7a2e3010ef7ccbbcbea0eb8.json  query-c2a26513b943249a01d14c4c3e65d592f1dd6433bc616886b47d05be5a990260.json  query-c4c1251a0c72998027764b73a26ef288bd348084c61ecc667796e50593b404a0.json  query-c5bf6dd2e03d5dfd5b7ce39a4b17ae13b2bb786988de99f9fae5b7d010d097a8.json  query-ec053a7aa0230bf2e7318690c1b52c622e3f1e1f12a18e1a1c83895e22e70192.json
crates/jocker/: Cargo.toml
crates/jocker-lib/: CHANGELOG.md  Cargo.toml
crates/jocker-lib/src/: common.rs  config.rs  database.rs  error.rs  lib.rs  logs.rs  ps.rs  start.rs  state.rs  stop.rs
crates/jocker-lib/src/command/: cargo.rs  mod.rs  ps.rs  pueue.rs  util.rs
crates/jocker/src/: cli.rs  main.rs
crates/jocker/tests/: test_lifecycle.rs  test_ps.rs
crates/jocker/tests/common/: mod.rs
examples/: Cargo.toml  README.md
examples/ares/src/: main.rs
examples/common/: Cargo.toml
examples/common/src/: lib.rs
examples/eris/: Cargo.toml
examples/eris/src/: main.rs
examples/harmonia/: Cargo.toml
examples/harmonia/src/: main.rs
examples/integration_test/: .env  jocker.yml
examples/integration_test/ares/: Cargo.toml
examples/integration_test/common/src/: lib.rs
examples/integration_test/eris/: Cargo.toml
examples/integration_test/harmonia/: Cargo.toml
migrations/: 20250610165409_init.sql
src/: cli.rs  common.rs  error.rs  export_info.rs  logs.rs  main.rs  ps.rs  refresh.rs  start.rs  state.rs  stop.rs
src/command/: cargo.rs  kill.rs  mod.rs  ps.rs  util.rs
