[package]
name = "jocker"
version = "0.3.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://gitlab.com/wykiki/jocker"
description = """
Run your monorepo binaries locally with ease !
"""

[dependencies]
argh = "0.1.12"
chrono = { version = "0.4.38", features = ["std"] }
dotenvy = "0.15.7"
fork = "0.2.0"
hex = "0.4.3"
hmac = "0.12.1"
notify = "6.1.1"
once_cell = "1.19.0"
ratatui = "0.28.0"
regex = "1.10.6"
rusqlite = { version  = "0.32.1", features = ["bundled", "chrono", "serde_json"] }
semver = { version = "1.0.23", features = ["serde"] }
serde = { version = "1.0.204", features = ["rc"] }
serde_json = "1.0.120"
serde_yml = "0.0.11"
sha2 = "0.10.8"
tabled = "0.15.0"
thiserror = "1.0.62"
tokio = { version = "1.39.2", features = ["full", "rt"] }
toml = "0.8.14"
url = { version = "2.5.2", features = ["serde"] }
