[package]
name = "jocker"
version = "0.4.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://gitlab.com/wykiki/jocker"
description = """
Run your monorepo binaries locally with ease !
"""

[dependencies]
argh = "0.1.12"
chrono = { version = "0.4.38", features = ["std"] }
dotenvy = "0.15.7"
fork = "0.2.0"
hex = "0.4.3"
hmac = "0.12.1"
notify = "7.0.0"
once_cell = "1.20.2"
ratatui = "0.29.0"
regex = "1.11.1"
rusqlite = { version  = "0.32.1", features = ["bundled", "chrono", "serde_json"] }
semver = { version = "1.0.23", features = ["serde"] }
serde = { version = "1.0.215", features = ["rc"] }
serde_json = "1.0.133"
serde_yml = "0.0.12"
sha2 = "0.10.8"
tabled = "0.17.0"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full", "rt"] }
toml = "0.8.19"
url = { version = "2.5.4", features = ["serde"] }
