[package]
name = "jocker"

authors.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
jocker-lib = { workspace = true }

argh = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
fork = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
notify = { workspace = true }
once_cell = { workspace = true }
ratatui = { workspace = true }
regex = { workspace = true }
rusqlite = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
sha2 = { workspace = true }
tabled = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
url = { workspace = true }

[dev-dependencies]
pueue-lib = { workspace = true }
tempfile = { workspace = true }
